Adicionando projeto DOM

--- a/Projetos/CRUD_javascript/index.html
+++ b/Projetos/CRUD_javascript/index.html
@@ -14,36 +14,15 @@
 
 		<h2>Cadastro de Personagens</h2>
 		
-		<button onclick="registrar()">
+		<button onclick="registrar()"> Registrar Personagem </button>
 
-			Registrar Personagem
+		<button onclick="mostrarRegistros()"> Mostrar Personagens </button>
 
-		</button>
+		<button onclick="atualizarRegistro()"> Modificar Personagens </button>
 
-		<button onclick="mostrarRegistros()">
+		<button onclick="deletarRegistro()"> Deletar Personagens </button>
 
-			Mostrar Personagens
-
-		</button>
-
-		<button onclick="atualizarRegistro()">
-
-			Modificar Personagens
-
-		</button>
-
-		<button onclick="deletarRegistro()">
-
-			Deletar Personagens
-
-		</button>
-
-		<button onclick="console.clear()">
-
-			Limpar Console
-
-		</button>
-
+		<button onclick="console.clear()"> Limpar Console </button>
 
 	</div>
 	
